syntax = "proto3";
package nicholasdotsol.duality.dex;

option go_package = "github.com/NicholasDotSol/duality/x/dex/types";
import "duality/dex/deposit_record.proto";
import "duality/dex/limit_order_tranche_user.proto";
import "gogoproto/gogo.proto";

message UserPositions {
  repeated DepositRecord PoolDeposits  = 1 [(gogoproto.nullable) = false];
  repeated LimitOrderTrancheUser LimitOrders  = 2 [(gogoproto.nullable) = false];
}
